--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
-           background: linear-gradient(120deg, #ff758c, #ff7eb3), url('your-image.jpg') no-repeat center center/cover;
+           background: linear-gradient(120deg, #ff758c, #ff7eb3), url('try\your-image.jpg') no-repeat center center/cover;
             color: white;
             margin: 0;
             padding: 0;
